# ilib-foo

./: CMakeLists.txt  CMakePresets.json  ac_root_setup.cmake  foo-plugins.in.json  get-ac-local-cmake-lib.cmake
.github/workflows/: build.yml
ac-local-plugin/: CMakeLists.txt  interface-schema.json  loader-schema.json
ac-local-plugin/code/: AcLocalFoo.cpp  CMakeLists.txt  ac-foo-plugin-dir.in.h  aclp-foo-interface.hpp  foo-schema.yml  version.in.h
ac-local-plugin/example/: CMakeLists.txt  e-plib-schema.cpp  ep-basic.cpp
ac-local-plugin/schema/: CMakeLists.txt
ac-local-plugin/schema-gen/: CMakeLists.txt  schema-gen.cpp
ac-local-plugin/schema/ac/schema/: Foo.hpp
ac-local-vs/: CMakeLists.txt
ac-local-vs/code/: AcLocalFooVS.cpp  AcLocalFooVS.hpp  CMakeLists.txt
ac-local-vs/example/: CMakeLists.txt  ep-vectorStore.cpp
code/: CMakeLists.txt
code/ac/foo/: EmbeddingInstance.cpp  EmbeddingInstance.hpp  Instance.cpp  Instance.hpp  Logging.cpp  Logging.hpp  Model.cpp  Model.hpp  Throw.hpp  VectorStore.cpp  VectorStore.hpp  api.h
example/: CMakeLists.txt  e-basic.cpp  e-vectorStore.cpp
test/: CMakeLists.txt  t-Instance.cpp  t-Model.cpp
